Your commit message here

--- a/jobfinderportal-master/assets/css/style.css
+++ b/jobfinderportal-master/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700,900|Muli:300,400,500,600,700,800,900&display=swap");
 .white-bg {
-  background: #ffffff;
+  background: #979696;
 }
 .gray-bg {
   background: #f5f5f5;
